src/styles/style.scss
@import "theme/style";
@import "404";

// main color theme: green
:root {
  --accent: #78e2a0;
  --accent-alpha-70: rgba(120, 226, 160, 0.7);
  --accent-alpha-20: rgba(120, 226, 160, 0.2);

  --background: #1d212c;
  --color: white;
  --border-color: rgba(255, 255, 255, 0.1);
}

/* Works on Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: --accent --background;
}

/* Works on Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  width: 10px;
}

*::-webkit-scrollbar-track {
  background: --background;
}

*::-webkit-scrollbar-thumb {
  background-color: --accent;
  border-radius: 20px;
  border: 3px solid --background;
}

